crates/soul-attributes/tests/ui/empty_required_value.rs
use soul_attributes::soul;

#[soul(id = "   ")]
fn annotated() {}

fn main() {}
